postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb
  labels:
    app: userdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userdb
  template:
    metadata:
      labels:
        app: userdb
    spec:
      containers:
        - name: userdb
          image: postgres:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script
          configMap:
            name: postgres-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: userdb-service
spec:
  type: ClusterIP
  selector:
    app: userdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
