userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: lucvdacker/userservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
